<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="Cancle">Cancel</string>
    <string name="Change">Change</string>
    <string name="EnableFullScreen">Enable</string>
    <string name="EnableNotifQuote">Enable Notification Quote</string>
    <string name="EnableNotifUserCP">Enable Notification Subscribe</string>
    <string name="EnableScrollNext">Enable</string>
    <string name="EnableVibrate">Enable</string>
    <string name="Forums">Forums</string>
    <string name="GoAddress">Go Address</string>
    <string name="Home">Home</string>
    <string name="Login">Log In</string>
    <string name="Logout">Log Out</string>
    <string name="NewPost">New Post</string>
    <string name="OK">OK</string>
    <string name="Other">Other</string>
    <string name="Post">Post</string>
    <string name="Return">Return</string>
    <string name="Save">Save</string>
    <string name="SetEffect">Effect</string>
    <string name="SetFont">Font</string>
    <string name="SetFullScreen">FullScreen</string>
    <string name="SetNotification">Notification</string>
    <string name="SetOpenTopic">Open Topic</string>
    <string name="SetOpenTopic_First">First</string>
    <string name="SetOpenTopic_Unread">First Unread</string>
    <string name="SetScrollNext">Pull to next</string>
    <string name="SetScrollReload">Pull to Reload</string>
    <string name="SetSign">Your Device</string>
    <string name="SetVibrate">Vibrate</string>
    <string name="Setting">Settings</string>
    <string name="Sign">Sign</string>
    <string name="Thread">Thread</string>
    <string name="UI">UI</string>
    <string name="Url">Address</string>
    <string name="User">User</string>
    <string name="enblae">Enable</string>
    <string name="exit">Exit</string>
    <string name="firstnew">First Unread</string>
    <string name="firstpost">First Post</string>
    <string name="lastpost">Last Post</string>
    <string name="setHome">set Quick Menu</string>
    <string name="setPathSave">Path Save</string>
    <string name="setSizeImage">Image Size</string>
    <string name="usercp">User CP</string>
    <string name="Bookmark">Bookmark</string>
    <string name="ButtonFirst">First</string>
    <string name="ButtonGo">Go</string>
    <string name="ButtonLast">Last</string>
    <string name="ButtonLogin">Login</string>
    <string name="ButtonNext">Next</string>
    <string name="ButtonPage">Page</string>
    <string name="ButtonPrev">Prev</string>
    <string name="Devider">Devider</string>
    <string name="EnableHeaderOptic">Enable</string>
    <string name="ListBookmark">Bookmark</string>
    <string name="ListQuote">List Quotes</string>
    <string name="NewThread">New Thread</string>
    <string name="PM">PM</string>
    <string name="Search">Search</string>
    <string name="SetHeaderOptic">Icon Topic</string>
    <string name="SetQuickLink">Quick Link</string>
    <string name="SetTheme">Theme</string>
    <string name="Subscribe">Subscribe</string>
    <string name="UnBookmark">UnBookmark</string>
    <string name="UnSubscribe">Unsubscribe</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">tappaVoz</string>
    <string name="captcha">Image Verification</string>
    <string name="changelog_close">Close</string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more...</string>
    <string name="changelog_title">"What's New"</string>
    <string name="choose_a_viewer">Chọn ảnh</string>
    <string name="drawer_close">close</string>
    <string name="drawer_open">open</string>
    <string name="ga_trackingId">UA-42762745-1</string>
    <string name="hello_world">Hello world!</string>
    <string name="help">Help</string>
    <string name="help_title">Help</string>
    <string name="largeLogin">large</string>
    <string name="location_client_powered_by_google">Powered by Google</string>
    <string name="menu_settings">Settings</string>
    <string name="normalLogin">normal</string>
    <string name="setHomeVoz">Set Home</string>
    <string name="share">Share Link</string>
    <string name="title_activity_parser_html">vozForums</string>
    <string name="title_changelog">Change log</string>
    <string name="upload_in_progress">uploading</string>
    <string name="whatnews">"What's news"</string>
    <string name="xlargeLogin">xlarge</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_webview">WebviewActivity</string>
    <string name="label_may_launch_url">May Launch URL</string>
    <string name="label_url">URL:</string>
    <string name="default_test_url">http://developer.android.com</string>
    <string name="label_start_custom_tab">Open Browser</string>
</resources>
