<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_dialog" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/textSizeMenuTitle" android:textStyle="bold" android:textColor="@color/white" android:gravity="left" android:id="@id/alert_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/Url" />
    <TextView android:background="@color/grey" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <RadioGroup android:id="@id/type" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioButton android:textSize="@dimen/textSizeMenuItem" android:textColor="@color/white" android:id="@id/address_home" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/Home" />
        <RadioButton android:textSize="@dimen/textSizeMenuItem" android:textColor="@color/white" android:id="@id/address_forum" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/Forums" />
        <RadioButton android:textSize="@dimen/textSizeMenuItem" android:textColor="@color/white" android:id="@id/address_thread" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Thread" />
        <RadioButton android:textSize="@dimen/textSizeMenuItem" android:textColor="@color/white" android:id="@id/address_post" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Post" />
    </RadioGroup>
    <AutoCompleteTextView android:textSize="@dimen/textSizeMenuItem" android:textColor="@color/black" android:id="@id/alert_edit1" android:background="@color/white" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:ems="10" android:capitalize="none" android:completionThreshold="1" android:layout_below="@id/alert_txt1" android:layout_alignParentLeft="true" />
    <TextView android:background="@color/grey" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_margin="5.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
        <Button android:textSize="@dimen/textSizeMenuItem" android:id="@id/alert_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/OK" android:layout_weight="0.15" />
        <Button android:textSize="@dimen/textSizeMenuItem" android:id="@id/alert_cancle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Cancle" android:layout_weight="0.12" />
    </LinearLayout>
</LinearLayout>