<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/firstpost"
        style="@style/textAlertLongClick"
        android:text="@string/firstpost"/>

    <TextView style="@style/textDevider"/>

    <TextView
        android:id="@+id/firstnew"
        style="@style/textAlertLongClick"
        android:text="@string/firstnew"/>

    <TextView style="@style/textDevider"/>

    <TextView
        android:id="@+id/lastpost"
        style="@style/textAlertLongClick"
        android:text="@string/lastpost"/>

    <TextView style="@style/textDevider"/>

    <TextView
        android:id="@+id/bookmark"
        style="@style/textAlertLongClick"
        android:text="@string/Bookmark"/>

    <TextView style="@style/textDevider"/>

    <TextView
        android:id="@+id/copylink"
        style="@style/textAlertLongClick"
        android:text="Copy Link"/>

    <TextView
        style="@style/textDevider"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/Prefix"
        style="@style/textAlertLongClick"
        android:text="Prefix"
        android:visibility="gone"/>
</LinearLayout>