<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/bg_dialog" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/scrollView1" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/textSizeMenuTitle" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Setting" />
            <TextView android:background="@color/grey" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_margin="5.0dip" />
            <RelativeLayout android:id="@id/layout_seekbar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
                <TextView android:textSize="@dimen/textSizeMenuItem" android:textColor="@color/white" android:gravity="left" android:id="@id/alert_title" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SetFont" android:layout_alignParentLeft="true" />
                <TextView android:textSize="@dimen/textSizeMenuItem" android:textColor="@color/white" android:gravity="center_vertical" android:id="@id/alert_txt1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="5" android:layout_alignParentRight="true" />
                <SeekBar android:id="@id/alert_seekbar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:layout_toLeftOf="@id/alert_txt1" android:layout_toRightOf="@id/alert_title" android:layout_centerInParent="true" />
            </RelativeLayout>
            <TextView android:background="@color/grey" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_margin="5.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/textSizeMenuItem" android:textColor="@color/white" android:gravity="left" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SetFullScreen" />
                <CheckBox android:textColor="@color/white" android:id="@id/checkBoxFullScreen" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/EnableFullScreen" />
            </LinearLayout>
            <TextView android:background="@color/grey" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_margin="5.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/textSizeMenuItem" android:textColor="@color/white" android:gravity="left" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SetHeaderOptic" />
                <CheckBox android:textColor="@color/white" android:id="@id/checkBoxIconTopic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enblae" />
            </LinearLayout>
            <TextView android:background="@color/grey" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_margin="5.0dip" />
            <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/textSizeMenuItem" android:textColor="@color/white" android:gravity="left" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SetScrollReload" />
                <CheckBox android:textColor="@color/white" android:id="@id/checkBoxPullNext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enblae" />
            </LinearLayout>
            <TextView android:background="@color/grey" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_margin="5.0dip" />
            <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/textSizeMenuItem" android:textColor="@color/white" android:gravity="left" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SetScrollNext" />
                <CheckBox android:textColor="@color/white" android:id="@id/checkBoxPullReload" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enblae" />
            </LinearLayout>
            <TextView android:background="@color/grey" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_margin="5.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/textSizeMenuItem" android:textColor="@color/white" android:gravity="left" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SetVibrate" />
                <CheckBox android:textColor="@color/white" android:id="@id/checkBoxSwipeGesture" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/EnableVibrate" />
            </LinearLayout>
            <TextView android:background="@color/grey" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_margin="5.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/textSizeMenuItem" android:textColor="@color/white" android:gravity="left" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SetNotification" />
                <CheckBox android:textColor="@color/white" android:id="@id/checkBoxNotification" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enblae" />
            </LinearLayout>
            <TextView android:background="@color/grey" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_margin="5.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/textSizeMenuItem" android:textColor="@color/white" android:gravity="left" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SetEffect" />
                <CheckBox android:textColor="@color/white" android:id="@id/checkEffect" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enblae" />
            </LinearLayout>
            <TextView android:background="@color/grey" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_margin="5.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/textSizeMenuItem" android:textColor="@color/white" android:gravity="left" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Devider" />
                <CheckBox android:textColor="@color/white" android:id="@id/checkDevider" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enblae" />
            </LinearLayout>
            <TextView android:background="@color/grey" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_margin="5.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/textSizeMenuItem" android:textColor="@color/white" android:gravity="left" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Sign" />
                <CheckBox android:textColor="@color/white" android:id="@id/checkSign" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enblae" />
            </LinearLayout>
            <TextView android:background="@color/grey" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_margin="5.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
                <Button android:textSize="@dimen/textSizeMenuItem" android:id="@id/alert_ok" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/OK" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>