<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/bg_dialog" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/textSizeMenuTitle" android:textColor="@color/white" android:gravity="left" android:id="@id/alert_title" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/SetFullScreen" />
    <TextView android:background="@color/grey" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_margin="5.0dip" />
    <CheckBox android:textColor="@color/white" android:id="@id/checkBoxFullScreen" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/EnableFullScreen" />
    <TextView android:background="@color/grey" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_margin="5.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
        <Button android:textSize="@dimen/textSizeMenuItem" android:id="@id/alert_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/OK" android:layout_weight="0.15" />
    </LinearLayout>
</LinearLayout>